--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,65 @@
-.App {
-  text-align: center;
+body {
+    background-color: darkgrey;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+h1 {
+    color: goldenrod;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.about-me p {
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.about-me {
+    background-color: cornflowerblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Minecraft{
+    background-color: darkorange;
+    color: white;
 }
+
+.Web-Development {
+    background-color: teal;
+    color: white;
+}
+
+.display-grid {
+    display: grid;
+}
+
+.seven-five-margin {
+    margin: 7.5%;
+}
+
+#in-development {
+    margin: 2%;
+    margin-left: 7.5%;
+}
+
+.language {
+    color: deepskyblue;
+}
+
+.fa-github, .fa-at {
+    font-size: 3em;
+    color: dodgerblue;
+}
+
+.fa-github:hover, .fa-at:hover {
+    color: white;
+}
+
+i {
+    padding: 15%;
+}
+
+.footer-icons, .footer-contacts {
+    margin: 1.5%;
+}
+
+.made-by-me {
+    color: white;
+    font-size: 1.25em;
+}
+
